--- a/semantic or non semantic.html
+++ b/semantic or non semantic.html
@@ -17,8 +17,12 @@
         <section><h3>this is section 
             <aside><h1>this aside</h1></aside>
             <footer><h4>this is footer</h4></footer>
+            <div><h3>this is non semantic tag
+                
+            </h3></div>
 
         </h3></section>
     </main>
 </body>
+
 </html>
