--- a/WEB-ASSIGNMENT/index.html
+++ b/WEB-ASSIGNMENT/index.html
@@ -6,13 +6,10 @@
     <title>My first HTML Page</title>
 </head>
 <body>
-    <h1>Name-Gaurav Saha,Father's Name-Shyamal Saha,Mother's Name-Alpana Saha 
-        <h2>CSE-18</h2>
-        <p>1542 <br> 
-            Magistrate Colony <br>
-             New Shivpuri <br>
-              Hapur-245101 <br></p>
-    </h1>
+    <h1>Name-Gaurav Saha,Father's Name-Shyamal Saha,Mother's Name-Alpana Saha</h1>
+    <h2>CSE-18</h2>
+    <p>1542 <br> Magistrate Colony <br> New Shivpuri <br> Hapur-245101 <br></p>
+    
     
 </body>
 </html>
