--- a/block and inline.html
+++ b/block and inline.html
@@ -18,5 +18,6 @@
     <img src="./GA_PHOTO.jpg" alt="gaurav">
     <span>hello</span>
     <span>world</span>
+    <span>hi</span>
 </body>
 </html>
