--- a/text formating.html
+++ b/text formating.html
@@ -21,7 +21,7 @@
      <ins>cut ok</ins>
      <mark>for highlight</mark>
     
-      <p><b>bold text using</b></p>
+      <p><b>bold text </b></p>
 
 
 </body>
