--- a/text formating.html
+++ b/text formating.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,9 +19,22 @@
     <hr>
      <font>hello world </font> size="+3" color="#RRGGBB"
      <ins>cut ok</ins>
-     <mark>for highlight</mark>
+     <mark>for highlight</mark> -->
     
-      <p><b>bold text </b></p>
+    <p><b><h1>Text Formatting Examples</h1></b></p>
+<br>
+<p><b><h2>Bold Text (using &lt;b &gt;)</h2></b></p>
+<p><b><h2>Important text (using &lt; strong &gt;</h2></b></p>
+<p><i><h2>Italic text (using &lt; i &gt;</h2></i></p>
+<p><em><h2>Emphasized text (using &lt; em &gt;</h2></em></p>
+<p><u><h2>Underline text (using &lt; u &gt;</h2></u></p>
+<p><mark><h2>Highlighted text (using &lt; mark &gt;</h2></mark></p>
+<p><b><h2>Important text (using &lt; strong &gt;</h2></b></p>
+<p><strike><h2>Deleted text (using &lt; del &gt;</h2></strike></p>
+<p><ins><h2>Inserted text (using &lt; ins &gt;</h2></ins></p>
+<p><blockquote><h2>This is a blockquote (using &lt; long quotation &gt;</h2></blockquote></p>
+<p><q><h2>Short quotation (using &lt; q &gt;</h2></q></p>
+<!-- Special charcters & entities -->
 
 
 </body>
