--- a/text formating.html
+++ b/text formating.html
@@ -35,7 +35,15 @@
 <p><blockquote><h2>This is a blockquote (using &lt; long quotation &gt;</h2></blockquote></p>
 <p><q><h2>Short quotation (using &lt; q &gt;</h2></q></p>
 <!-- Special charcters & entities -->
+ <audio controls autoplay muted loop>
+    <source src="suzume_theme_ringtone.mp3" type="audio/mp3" 
+ 
+</audio>
 
+<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/VO4ndeogLPQ?si=m3AHSPIMDZdY305X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+
+<a href="http://www.google.com" target="_blank">google</a>
+<a href="http://www.google.com" target="_parent">google</a>
 
 </body>
 </html>
