text formating news

--- a/text formating.html
+++ b/text formating.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
     <hr>
      <font>hello world </font> size="+3" color="#RRGGBB"
      <ins>cut ok</ins>
-     <mark>for highlight</mark> -->
+     <mark>for highlight</mark>
     
     <p><b><h1>Text Formatting Examples</h1></b></p>
 <br>
@@ -34,13 +34,13 @@
 <p><ins><h2>Inserted text (using &lt; ins &gt;</h2></ins></p>
 <p><blockquote><h2>This is a blockquote (using &lt; long quotation &gt;</h2></blockquote></p>
 <p><q><h2>Short quotation (using &lt; q &gt;</h2></q></p>
-<!-- Special charcters & entities -->
+
  <audio controls autoplay muted loop>
     <source src="suzume_theme_ringtone.mp3" type="audio/mp3" 
  
 </audio>
 
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/VO4ndeogLPQ?si=m3AHSPIMDZdY305X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VO4ndeogLPQ?si=m3AHSPIMDZdY305X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <a href="http://www.google.com" target="_blank">google</a>
 <a href="http://www.google.com" target="_parent">google</a>
