--- a/LAB EXPERIMENTS/EXPERIMENT4.HTML
+++ b/LAB EXPERIMENTS/EXPERIMENT4.HTML
@@ -29,6 +29,8 @@
         <input type="number"> <br><br>
         <label for="">Special Requests:</label>
         <textarea name="" id="" cols="70" rows="10"></textarea>
+        <button>BOOK NOW</button>
+        <input type="reset"value="reset form">
     </form>
 </body>
 </html>
